cmake_minimum_required(VERSION 3.14)
project(PC2)

set(CMAKE_CXX_STANDARD 17)

add_executable(PC2 main.cpp Fighter.cpp Fighter.h BruceLee.cpp BruceLee.h ChuckNorris.cpp ChuckNorris.h JasonStatham.cpp JasonStatham.h Attack.cpp Attack.h Punch.cpp Punch.h Saber.cpp Saber.h Firearm.cpp Firearm.h Defense.cpp Defense.h Elude.cpp Elude.h Shield.cpp Shield.h Armor.cpp Armor.h Fight.cpp Fight.h Arena.cpp Arena.h)